diff browser: file/value navigation, old/new values, IDE diff opener